--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node bot.ts",
+    "dev": "tsx watch src/index.ts",
+    "start": "node dist/index.js",
+    "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -23,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
