--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.12.2",
+    "chalk": "^5.6.2",
     "commander": "^14.0.1",
     "dotenv": "^17.2.3",
     "ethers": "^5.8.0",
     "pino": "^10.0.0",
-    "pino-pretty": "^13.1.2"
+    "pino-pretty": "^13.1.2",
+    "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
