--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "ts-node src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc -p tsconfig.json",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,12 +21,16 @@
     "commander": "^14.0.1",
     "dotenv": "^17.2.3",
     "ethers": "^6.15.0",
+    "inquirer": "^12.10.0",
+    "p-timeout": "^7.0.1",
     "pino": "^10.0.0",
     "pino-pretty": "^13.1.2",
     "prompt-sync": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
+    "@types/prompt-sync": "^4.2.3",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
